<?xml version="1.0" encoding="utf-8"?>
<!-- activity_themes.xml
Layout file for the themes activity in this app
Created by: Gabe Shores
Created on: 2/24/24,
Last Modified by: Gabe Shores
Last Modified on: 2/29/24 ~ Comments added
Assignment/Project: A290 Android Development Final Project
-->
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frm_ThemesLinearLayout"
    android:layout_width="match_parent"
    android:background="@color/default_background"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <!--Toolbar for this section, with a back button added in ThemesActivity.java-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbr_Themes"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        app:title="@string/lbl_ThemesTitle"
        app:titleTextColor="@color/default_snake" />

    <!--RadioGroup for the themes. When changed determines which one changed and updates the value in shared preferences accordingly-->
    <RadioGroup
        android:id="@+id/rdo_ThemeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp">

        <!--Updates to the default theme when selected-->
        <RadioButton
            android:id="@+id/rdo_Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rdo_Default"
            android:textColor="@color/white" />

        <!--Updates to the GameBoy theme when selected-->
        <RadioButton
            android:id="@+id/rdo_GameBoy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdo_GameBoy"
            android:textColor="@color/white" />

        <!--Updates to the black and white theme when selected-->
        <RadioButton
            android:id="@+id/rdo_BlackWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdo_BlackWhite"
            android:textColor="@color/white" />

        <!--Updates to the halloween theme when selected-->
        <RadioButton
            android:id="@+id/rdo_Halloween"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdo_Halloween"
            android:textColor="@color/white" />

        <!--Updates to the IU theme when selected-->
        <RadioButton
            android:id="@+id/rdo_IU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdo_IU"
            android:textColor="@color/white" />

        <!--Updates to the black and yellow theme when selected-->
        <RadioButton
            android:id="@+id/rdo_BlackYellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdo_BlackYellow"
            android:textColor="@color/white" />
    </RadioGroup>


</androidx.appcompat.widget.LinearLayoutCompat>